# dcaf

./: .dockerignore  .env.example  .gitignore  .mcp.json  A2A_FIX_SUMMARY.md  A2A_IMPLEMENTATION_SUMMARY.md  A2A_INVESTIGATION_REPORT.md  A2A_QUICK_START.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.example  GEMINI_SUPPORT.md  README.md  README_V2.md  agent_server.py  build.sh  build_index.py  docker-compose.yml  ec2_cost_messages.example  env.example  env.gemini.example  env_update_aws_creds.sh  index.html  interactive_labeler.py  llm.py  llm_passthrough_agent.py  main.py  mkdocs.yml  okteto.yml  predictor.py  pyproject.toml  requirements-docs.txt  requirements.in  requirements.txt  service-desk-agent.postman_collection.json  service_desk_mock_ui.py  setup.py  test_mcp_live.py  vector_store.py  (+1 more)
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump.yml
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/A2A_FIX_SUMMARY/: index.html
2.1.0/A2A_HANDOFF_EXAMPLE/: index.html
2.1.0/A2A_IMPLEMENTATION_SUMMARY/: index.html
2.1.0/A2A_INVESTIGATION_REPORT/: index.html
2.1.0/A2A_QUICK_START/: index.html
2.1.0/CONFIGURATION_FEATURE/: index.html
2.1.0/GEMINI_SUPPORT/: index.html
2.1.0/SESSION_STATE/: index.html
2.1.0/agno-bug-report/: index.html
2.1.0/api-reference/: index.html
2.1.0/architecture/: index.html
2.1.0/core/: index.html
2.1.0/dcaf-feature-catalog/: index.html
2.1.0/engineering-handoff/: index.html
2.1.0/getting-started/: index.html
2.1.0/javascripts/: extra.js
2.1.0/logging-architecture/: index.html
2.1.0/raw-llm-logging/: index.html
2.1.0/search/: search_index.json
2.1.0/stylesheets/: extra.css
Logs/: sample_logs.txt
agents/: boilerplate_agent.py  cicd_failure_agent.py  cmd_agent.py  cost_cmd_agent.py  cost_optimization_agent.py  echo_agent.py  failure_predictive_agent.py  k8s_agent.py  llm_passthrough_agent.py  production_readiness_agent copy.py  production_readiness_agent.py  simple_log_analyzer.py  tool_calling_agent_boilerplate.py  tool_calling_cmd_agent.py
agents/production_readiness/: __init__.py  agent.py  integration.py  resource_provider.py  system_prompt.py
agents/tools/: BaseDuploInterfaceTool.py  CheckAutoScalingGroupProdReadinessTool.py  CheckElastiCacheProdReadinessTool.py  CheckK8sDeploymentProdReadinessTool.py  CheckRdsProdReadinessTool.py  CheckS3BucketProdReadinessTool.py  CheckSystemSecurityFeaturesProdReadinessTool.py  CheckSystemSettingsProdReadinessTool.py  CheckTenantSettingsProdReadinessTool.py  GenerateProdReadinessSummaryTool.py  GetAutoScalingGroupsTool.py  GetElastiCacheInstancesTool.py  GetK8sDeploymentsTools.py  GetRdsInstancesTool.py  GetS3BucketsTool.py  GetSystemSecurityFeaturesTool.py  GetSystemSettingsTool.py  GetTenantSettingsTool.py  ProdReadinessChecksEvaluator.py
dab/: __init__.py  agent_server.py  channel_routing.py  cli.py
dab/agents/: aws_agent.py  cmd_agent.py  llm_passthrough_agent.py  tool_calling_agent_boilerplate.py  tool_calling_cmd_agent.py
dab/schemas/: messages.py
dab/services/: llm.py
data/: labeled_logs.json
dcaf/: __init__.py  agent_server.py  channel_routing.py  cli.py  tools.py
dcaf/agents/: __init__.py  aws_agent.py  base_command_agent.py  boilerplate_agent.py  cmd_agent.py  echo_agent.py  k8s_agent.py  llm_passthrough_agent.py  tool_calling_agent.py  tool_calling_agent_boilerplate.py  tool_calling_cmd_agent.py
dcaf/core/: CLAUDE.md  __init__.py  _context.py  agent.py  config.py  discovery.py  events.py  interceptors.py  llm.py  models.py  primitives.py  server.py  session.py  system_events.py  tools.py
dcaf/llm/: __init__.py  base.py  bedrock.py  vertex.py
dcaf/mcp/: __init__.py  tools.py
dcaf/schemas/: __init__.py  events.py  messages.py
dev/: 404.html  index.html  sitemap.xml
dev/A2A_FIX_SUMMARY/: index.html
dev/A2A_HANDOFF_EXAMPLE/: index.html
dev/A2A_IMPLEMENTATION_SUMMARY/: index.html
dev/A2A_INVESTIGATION_REPORT/: index.html
dev/A2A_QUICK_START/: index.html
dev/CONFIGURATION_FEATURE/: index.html
dev/GEMINI_SUPPORT/: index.html
dev/SESSION_STATE/: index.html
dev/agno-bug-report/: index.html
dev/api-reference/: index.html
dev/architecture/: index.html
docs/: A2A_HANDOFF_EXAMPLE.md  CONFIGURATION_FEATURE.md  SESSION_STATE.md  agno-bug-report.md  architecture.md  best-practices.md  dcaf-feature-catalog.md  engineering-handoff.md  engineering-initiatives.md  gaps.md  getting-started.md  index.md  llm_framework_features.md  llm_framework_gaps.md  logging-architecture.md  project-changes.md  raw-llm-logging.md
examples/: a2a_example.py  bedrock_llm_ex.py  config_driven_agent.py  core_server.py  create_tools.py  gemini_example.py  prompt_caching_example.py  raw_llm_logging_example.py  skills_example.py  streaming_example.py  test_hello_python.sh  test_hello_python_k8s.sh  test_skills.sh
main/: 404.html  agno-fix.patch  agno-test-case.py  index.html  sitemap.xml
schemas/: ProdReadinessCheck.py  ProdReadinessReport.py  ResourceProdReadinessCheckResult.py  ResourceProdReadinessReport.py  ToolResult.py  UnableToConnetToDuploError.py  cicd_log.py  messages.py
scripts/: check_code_health.py  generate_pptx.py  generate_presentation.py
services/: aws_service.py  chat_service_unified.py  cloudwatch_file_ingest.py  cypher_parser_binding.py  diagram_styling.py  duplo_client.py  embedding.py  graph.py  llm.py  mermaid_service.py  neo4j_client.py  neo4j_http_client.py  neo4j_provider.py  performance_tracker.py  prompt_manager.py  relationship_builder.py  schema_metrics.py  schema_selector.py  tenant_cypher_rewriter.py  updater.py
src/: __init__.py  agent_server.py  cli.py  config.py
tests/: CLAUDE.md  __init__.py  test_a2a_integration.py  test_agno_adapter.py  test_agno_live.py  test_brackets_issue.py  test_channel_routing.py  test_core_domain.py  test_k8s_agent_kubeconfig.py  test_logger.py  test_mcp_approval_flow.py  test_mcp_tools.py  test_prompt_caching.py  test_request_fields.py  test_v1_compatibility.py
vnext/: 404.html  index.html  sitemap.xml
(+543 files in other folders)
