[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcaf"
version = "2.0.21"
description = "DuploCloud Agent Builder (DAB) - A framework for building LLM powered AI agents and workflows that integrate with the DuploCloud Help Desk."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DuploCloud", email = "support@duplocloud.com"}
]
keywords = ["ai", "agents", "duplocloud", "chatbot", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "boto3",
    "python-dotenv",
    "tk",
    "requests",
    "langchain_community",
    "duplocloud-client",
    # LLM provider dependencies (all included by default)
    "agno==2.3.21",               # Agno SDK - pinned to avoid [] bug in 2.3.26
    "aioboto3>=13.0.0",           # AWS Bedrock async support
    "httpx>=0.27.0",              # A2A protocol, HTTP client
    "google-generativeai==0.8.6", # Google Gemini support (pinned)
    "google-genai",               # Google Genai SDK (latest)
    "anthropic>=0.40.0",          # Anthropic Direct API
    "openai>=1.0.0",              # OpenAI and Azure OpenAI
    "ollama>=0.3.0",              # Local Ollama support
]

[project.optional-dependencies]
# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mike>=2.0.0",
    "pymdown-extensions>=10.0",
    "pygments>=2.16.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

# MCP (Model Context Protocol)
mcp = [
    "fastmcp>=2.0",
]

# Complete installation (all optional features)
all = [
    "dcaf[docs,dev,mcp]",
]

[project.urls]
Homepage = "https://github.com/duplocloud/service-desk-agents/tree/pip-package"
#Repository = "https://github.com/duplocloud/dcaf"
#Issues = "https://github.com/duplocloud/dcaf/issues"

[project.scripts]
dcaf = "dcaf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dcaf*"]

[tool.setuptools.package-data]
dcaf = ["*.py"]

# =============================================================================
# Ruff - Fast Python linter and formatter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (flexibility)
    "ARG001", # unused function argument (common in protocols)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG001"]    # Allow unused arguments in tests

[tool.ruff.lint.isort]
known-first-party = ["dcaf"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MyPy - Static type checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten over time
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    "site/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "dcaf.core.*"
disallow_untyped_defs = true  # Stricter for new core code

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20260107",
]
