[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcaf"
version = "2.0.29"
description = "DuploCloud Agent Builder (DAB) - A framework for building LLM powered AI agents and workflows that integrate with the DuploCloud Help Desk."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DuploCloud", email = "support@duplocloud.com"}
]
keywords = ["ai", "agents", "duplocloud", "chatbot", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "boto3",
    "python-dotenv",
    "tk",
    "requests",
    "duplocloud-client",
    # LLM provider dependencies (all included by default)
    "agno==2.5.2",                # Agno SDK - skills support
    "aioboto3>=13.0.0",           # AWS Bedrock async support
    "httpx>=0.27.0",              # A2A protocol, HTTP client
    "google-generativeai==0.8.6", # Google Gemini support (pinned)
    "google-genai",               # Google Genai SDK (latest)
    "anthropic>=0.40.0",          # Anthropic Direct API
    "openai>=1.0.0",              # OpenAI and Azure OpenAI
    "ollama>=0.3.0",              # Local Ollama support
]

[project.optional-dependencies]
# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mike>=2.0.0",
    "pymdown-extensions>=10.0",
    "pygments>=2.16.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff==0.15.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    # Code health (CI)
    "radon>=6.0.0",
    "import-linter>=2.0",
    # Security & dead code (CI, non-blocking)
    "pip-audit",
    "vulture",
]

# MCP (Model Context Protocol)
mcp = [
    "fastmcp>=2.0",
]

# Complete installation (all optional features)
all = [
    "dcaf[docs,dev,mcp]",
]

[project.urls]
Homepage = "https://github.com/duplocloud/service-desk-agents/tree/pip-package"
#Repository = "https://github.com/duplocloud/dcaf"
#Issues = "https://github.com/duplocloud/dcaf/issues"

[project.scripts]
dcaf = "dcaf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dcaf*"]

[tool.setuptools.package-data]
dcaf = ["*.py"]

# =============================================================================
# Ruff - Fast Python linter and formatter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "C901",   # McCabe complexity
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except (often intentional)
    "B905",   # zip without strict= (flexibility)
    "S101",   # allow assert (used for type narrowing)
    "ARG001", # unused function argument (common in protocols)
]

[tool.ruff.lint.pylint]
max-args = 8
max-statements = 50
max-branches = 12
max-returns = 6

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG001", "S101", "S105", "S106", "PLR0913"]  # test-specific relaxations

# Legacy files with known complexity/style issues — suppress until refactored
"dcaf/agent_server.py" = ["C901", "PLR0912", "PLR0915"]
"dcaf/agents/*.py" = ["C901", "PLR0912", "PLR0915", "S602", "S603"]
"dcaf/cli.py" = ["C901", "PLR0911", "PLR0912", "S602", "S603", "S607"]
"dcaf/llm/*.py" = ["PLR0913"]
"dcaf/mcp/__init__.py" = ["C901", "S104"]
"dcaf/mcp/tools.py" = ["C901", "PLR0912", "PLR0913", "PLR0915"]
"examples/*.py" = ["S311", "S602", "S603"]
"main.py" = ["S104"]
"scripts/*.py" = ["C901", "F841", "S603"]

# Core files with pre-existing issues in functions not introduced by feature/skills
"dcaf/core/adapters/outbound/agno/adapter.py" = ["C901", "PLR0912", "PLR0913"]
"dcaf/core/adapters/outbound/agno/message_converter.py" = ["PLR0911"]
"dcaf/core/adapters/outbound/agno/model_factory.py" = ["S110"]
"dcaf/core/adapters/outbound/agno/response_converter.py" = ["C901", "PLR0911", "PLR0912"]
"dcaf/core/agent.py" = ["C901", "PLR0911", "PLR0913"]
"dcaf/core/config.py" = ["C901", "PLR0911", "PLR0912", "S105"]
"dcaf/core/domain/value_objects/platform_context.py" = ["C901", "PLR0912"]
"dcaf/core/models.py" = ["C901"]
"dcaf/core/server.py" = ["C901", "PLR0912", "PLR0913", "PLR0915", "S104"]

[tool.ruff.lint.isort]
known-first-party = ["dcaf"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MyPy - Static type checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten over time
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    "site/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "dcaf.core.*"
disallow_untyped_defs = true  # Stricter for new core code

[[tool.mypy.overrides]]
module = "dcaf.agents.*"
ignore_errors = true  # Legacy agents, not strictly typed

[[tool.mypy.overrides]]
module = "dcaf.llm.*"
ignore_errors = true  # Legacy LLM code, not strictly typed

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff==0.15.0",
    "types-requests>=2.32.4.20260107",
]

# =============================================================================
# Prek — pre-commit hook runner
# Install: uv tool install prek
# =============================================================================
[tool.prek]

[[tool.prek.hooks]]
name = "Ruff Format"
priority = 10
command = "ruff format"
include = ["*.py"]
exclude = [".venv", "build", "dist", "__pycache__"]

[[tool.prek.hooks]]
name = "Ruff Check"
priority = 20
command = "ruff check --fix"
include = ["*.py"]
exclude = [".venv", "build", "dist", "__pycache__"]

[[tool.prek.hooks]]
name = "MyPy"
priority = 30
command = "mypy dcaf/"
include = ["*.py"]
exclude = [".venv", "build", "dist", "tests"]

# =============================================================================
# import-linter — architectural layer enforcement
# =============================================================================
[tool.importlinter]
root_packages = ["dcaf"]

[[tool.importlinter.contracts]]
name = "Schemas are dependency-free"
type = "forbidden"
source_modules = ["dcaf.schemas"]
forbidden_modules = ["dcaf.core", "dcaf.agents", "dcaf.llm"]

[[tool.importlinter.contracts]]
name = "Core does not import agents"
type = "forbidden"
source_modules = ["dcaf.core"]
forbidden_modules = ["dcaf.agents"]

[[tool.importlinter.contracts]]
name = "Legacy LLM does not import core or agents"
type = "forbidden"
source_modules = ["dcaf.llm"]
forbidden_modules = ["dcaf.core", "dcaf.agents"]
